<resources>
    <string name="App_Name">My WeChat</string>
    <string name="server">8.140.133.34:7541</string>

    <!-- Strings related to LogInActivity -->
    <string name="LogInActivity_ID">ID</string>
    <string name="LogInActivity_PromptPassword">Password</string>
    <string name="LogInActivity_Action_SignIn">Sign in</string>
    <string name="LogInActivity_Action_Register">Register</string>
    <string name="LogInActivity_Action_SignIn_short">Sign in</string>
    <string name="LogInActivity_Welcome">"Welcome to MyWechat!"</string>
    <string name="LogInActivity_InvalidPhoneNumber">Not a valid phone number</string>
    <string name="LogInActivity_InvalidPassword">Password must be at least 8 characters and contain at least one number and one English character</string>
    <string name="LogInActivity_LogInFailed">"Login failed"</string>

    <!-- Strings related to RegisterActivity -->
    <string name="ReigsterActivity_Title">Please Register</string>
    <string name="RegisterActivity_ID">ID</string>
    <string name="RegisterActivity_Password">Password</string>
    <string name="RegisterActivity_Email">Email</string>
    <string name="RegisterActivity_VerifyCode">VerifyCode</string>
    <string name="RegisterActivity_Nickname">Nickname</string>
    <string name="RegisterActivity_Register">Register</string>
    <string name="RegisterActivity_GetVerifyCode">Get VerifyCode</string>

    <!-- Strings related to CheckingActivity -->

    <!-- Strings related to MainActivity -->
    <string name="MainActivity_Title">MainActivity</string>

    <!-- Strings related to ChatsFragment -->
    <string name="ChatsFragment_Title">Chats</string>

    <!-- Strings related to ContactsFragment -->
    <string name="ContactsFragment_Title">Contacts</string>
    <string name="ContactsFragment_Newfriend">New Friends</string>
    <string name="ContactsFragment_Groups">Group Chats</string>

    <!-- Strings related to DiscoverFragment -->
    <string name="DiscoverFragment_Title">Discover</string>

    <!-- Strings related to MeFragment -->
    <string name="MeFragment_Title">Me</string>
    <string name="MeFragment_Nickname">Nickname</string>
    <string name="MeFragment_PhoneNumber">Phone Number:</string>
    <string name="MeFragment_LogOut">Log Out</string>

    <!-- Strings related to ContactActivity -->
    <string name="ContactActivity_Nickname">nickname</string>
    <string name="ContactActivity_PhoneNumber">Phone Number:</string>
    <string name="ContactActivity_Region">Region:</string>
    <string name="ContactActivity_WhatsUp">What\'s Up</string>
    <string name="ContactActivity_WhatsUpText">Empty</string>
    <string name="ContactActivity_Chat">Messages</string>
    <string name="ContactActivity_Settings">Settings</string>
    <string name="ContactActivity_Title">Your Contact</string>

    <!-- Strings related to ContactSettingActivity -->
    <string name="ContactSettingActivity_Title">Settings</string>
    <string name="ContactSettingActivity_Delete">Delete</string>

    <!-- Strings related to GroupsActivity -->
    <string name="GroupsActivity_Title">Groups</string>

    <!-- Strings related to NewfriendActivity -->
    <string name="NewfriendActivity_Title">Add New Friend</string>
    <string name="NewfriendActivity_Button">SEARCH FRIEND</string>
    <string name="NewfriendActivity_See">WHO WANT TO ADD YOU</string>

    <!-- Strings related to MyprofileActivity -->
    <string name="MyprofileActivity_Title">My Profile</string>
    <string name="MyprofileActivity_Profile">Profile Photo</string>
    <string name="MyprofileActivity_Nickname">Nickname</string>
    <string name="MyprofileActivity_Gender">Gender</string>
    <string name="MyprofileActivity_BirthDate">BirthDate</string>
    <string name="MyprofileActivity_WhatsUp">What\'s Up</string>

    <!-- Strings related to ProfileChangeActivity -->
    <string name="ProfileChangeActivity_Title">Change Your Profile Photo</string>
    <string name="ProfileChangeActivity_Album">Choose from Album</string>
    <string name="ProfileChangeActivity_Camera">Take Photo</string>

    <!-- Strings related to NicknameChangeActivity -->
    <string name="NicknameChangeActivity_Title">Change Your Nickname</string>
    <string name="NicknameChangeActivity_Nickname">Nickname:</string>
    <string name="NicknameChangeActivity_Done">Done</string>

    <!-- Strings related to IDChangeActivity -->
    <string name="IDChangeActivity_Title">Change My WeChat ID</string>
    <string name="IDChangeActivity_ID">ID:</string>
    <string name="IDChangeActivity_Done">Done</string>

    <!-- Strings related to GenderChangeActivity -->
    <string name="GenderChangeActivity_Title">Set Gender</string>
    <string name="GenderChangeActivity_Done">Done</string>
    <string name="GenderChangeActivity_Male">Male</string>
    <string name="GenderChangeActivity_Female">Female</string>
    <string name="GenderChangeActivity_Invisible">Invisible</string>

    <!-- Strings related to BirthDateChangeActivity -->
    <string name="BirthDateChangeActivity_Title">Change Your BirthDate</string>
    <string name="BirthDateChangeActivity_Done">Done</string>

    <!-- Strings related to WhatsUpChangeActivity -->
    <string name="WhatsUpChangeActivity_Title">Set What\'s up</string>
    <string name="WhatsUpChangeActivity_Done">Done</string>

    <!-- Strings related to AddNewfriendActivity -->
    <string name="AddNewfriendActivity_Title">New friend</string>
    <string name="AddNewfriendActivity_Username">Username</string>
    <string name="AddNewfriendActivity_Profile">Profile Photo</string>
    <string name="AddNewfriendActivity_Nickname">Nickname</string>
    <string name="AddNewfriendActivity_Gender">Gender</string>
    <string name="AddNewfriendActivity_BirthDate">BirthDate</string>
    <string name="AddNewfriendActivity_WhatsUp">What\'s Up</string>
    <string name="AddNewfriendActivity_Add">Add</string>

    <!-- Strings related to AcceptNewfriendActivity -->
    <string name="AcceptNewfriendActivity_Title">New friend</string>
    <string name="AcceptNewfriendActivity_Username">Username</string>
    <string name="AcceptNewfriendActivity_Profile">Profile Photo</string>
    <string name="AcceptNewfriendActivity_Nickname">Nickname</string>
    <string name="AcceptNewfriendActivity_Gender">Gender</string>
    <string name="AcceptNewfriendActivity_BirthDate">BirthDate</string>
    <string name="AcceptNewfriendActivity_WhatsUp">What\'s Up</string>
    <string name="AcceptNewfriendActivity_Accept">Accept</string>
    <string name="AcceptNewfriendActivity_Reject">Reject</string>
</resources>