<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.me.myprofile.change.GenderChangeActivity">

    <RadioGroup
        android:id="@+id/GenderChangeActivity_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/GenderChangeActivity_Male"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/GenderChangeActivity_Male"
            android:textSize="25sp"/>

        <RadioButton
            android:id="@+id/GenderChangeActivity_Female"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/GenderChangeActivity_Female"
            android:textSize="25sp"/>

        <RadioButton
            android:id="@+id/GenderChangeActivity_Invisible"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/GenderChangeActivity_Invisible"
            android:textSize="25sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/GenderChangeActivity_Done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/GenderChangeActivity_Done"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/GenderChangeActivity_RadioGroup"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>