<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ContactActivity_Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/ContactActivity_Nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactActivity_Nickname"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="600dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/ContactActivity_Chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactActivity_Chat"/>
        <Button
            android:id="@+id/ContactActivity_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactActivity_Settings"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>